--- a/httpdocs/soundboard.css
+++ b/httpdocs/soundboard.css
@@ -53,7 +53,7 @@ input[type=submit] { background: #494c50; }
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
-		background: url('images/logo.png') no-repeat left 60%;
+		background: url('favicon.ico') no-repeat left 60%;
 	}
 	
 	@media screen and (max-width: 500px) {
