--- a/httpdocs/soundboard.css
+++ b/httpdocs/soundboard.css
@@ -1,10 +1,21 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
+@font-face {
+	font-family: 'Open Sans';
+	font-weight: 300;
+	src: url("opensans-300.woff") format("woff");
+}
+
+@font-face {
+	font-family: 'Open Sans';
+	font-weight: 400;
+	src: url("opensans-400.woff") format("woff");
+}
 
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
 	-webkit-box-sizing: border-box;
+	user-select: none;
 }
 
 html, body {
@@ -20,32 +31,53 @@ form {
 	margin: 0 auto;
 }
 
-input {
+h3 {
+	padding-bottom: 10px;
+	text-align: center;
+}
+
+button, input {
 	width: 100%;
-	margin-bottom: 5px;
+	margin: 5px 0 10px 0;
 	padding: 10px;
 	background: #282b30;
 	border: 1px #53565a solid;
 	color: #fff;
 	font-family: 'Open Sans', Helvetica, sans-serif;
 	font-size: 16px;
+	outline: none;
+	cursor: pointer;
 }
+	button, .sound input { width: 40% }
+	button.navbtn {
+		display: block;
+		width: 80%;
+		margin: 20px auto;
+	}
+	button[disabled] {
+		color: darkgray;
+		filter: grayscale(100%);
+	}
+	button.on { border-color: red }
 
-input[type=submit] { background: #494c50; }
+input[type=submit] {
+	background: #494c50;
+	cursor: pointer;
+}
 
 #navbar {
 	width: 100%;
-	height: 59px;
-	border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
-	position: fixed;
+	position: sticky;
 	top: 0;
 	left: 0;
+	margin-bottom: 10px;
 	color: white;
 	background: #282b30;
+	border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
+	z-index: 1;
 }
 
 	#title {
-		display: inline-block;
 		line-height: 58px;
 		margin-left: 4px;
 		padding-left: 50px;
@@ -53,48 +85,61 @@ input[type=submit] { background: #494c50; }
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
-		background: url('favicon.ico') no-repeat left 60%;
+		background: url('favicon.ico') no-repeat 5px/42px;
+		cursor: pointer;
 	}
-	
-	@media screen and (max-width: 500px) {
+/*
+	@media screen and (max-width: 400px) {
 		#title { padding-left: 1px; background: none; }
 	}
-	
+*/
 	#buttons {
-		height: 100%;
+		height: 58px;
 		position: absolute;
 		top: 0;
 		right: 0;
 		background: #282b30;
 		white-space: nowrap;
-		border-right: 1px #1C1F24 solid;
+		border-right: 1px #1c1f24 solid;
 	}
-	
+
 		#buttons img {
 			padding: 16px;
-			border-left: 1px #1C1F24 solid;
+			border-left: 1px #1c1f24 solid;
 			cursor: pointer;
 		}
 
-#spacer { height: 70px; }
+		#outputmsg {
+			width: 100%;
+			padding: 2px 0 3px 0;
+			text-align: center;
+			background: #494c50;
+			border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
+		}
 
-#contents, #upload {
+#contents, #form {
 	width: 100%;
 	padding-bottom: 40px;
 	line-height: 150%;
 }
 
-#upload { display: none; }
+#form { display: none; }
 
-.sound {
+#creditsbtn {
+	margin-top: 60px;
+	text-align:center;
+}
+
+#creditsbtn, .sound {
 	width: 100%;
-	box-sizing: border-box;
+/*	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
-	clear: both;
+*/	clear: both;
 	border-top: 1px #53565a solid;
 	border-bottom: 1px #53565a solid;
 	background: #282b30;
+	cursor: pointer;
 }
 
 	.description, .user, .playing {
@@ -104,7 +149,7 @@ input[type=submit] { background: #494c50; }
 		position: relative;
 		top: 1px;
 	}
-	
+
 	.description {
 		font-size: 18px;
 		font-weight: 400;
@@ -114,7 +159,7 @@ input[type=submit] { background: #494c50; }
 		font-size: 16px;
 		font-weight: 300;
 	}
-	
+
 	.description:first-letter, .user:first-letter { text-transform: uppercase; }
 
 	img.userpic {
@@ -123,6 +168,7 @@ input[type=submit] { background: #494c50; }
 		float: left;
 		margin: 5px;
 		border: 1px black solid;
+		border-radius: 6px;
 	}
 
 	.playing {
@@ -138,3 +184,10 @@ input[type=submit] { background: #494c50; }
 	border-top: 4px #53565a solid;
 	border-bottom: 4px #53565a solid;
 }
+
+.hide { display: none }
+
+input:focus,
+button:hover, #buttons img:hover,
+#creditsbtn:hover, .sound:hover { background: #2b2e33 }
+input[type=submit]:hover { background: #4b4e52 }
