--- a/httpdocs/soundboard.css
+++ b/httpdocs/soundboard.css
@@ -1,13 +1,13 @@
 @font-face {
 	font-family: 'Open Sans';
 	font-weight: 300;
-	src: url("opensans-300.woff") format("woff");
+	src: url('opensans-300.woff') format('woff');
 }
 
 @font-face {
 	font-family: 'Open Sans';
 	font-weight: 400;
-	src: url("opensans-400.woff") format("woff");
+	src: url('opensans-400.woff') format('woff');
 }
 
 * {
@@ -20,11 +20,9 @@
 
 html, body {
 	width: 100%;
-	height: 100%;
 	font-family: 'Open Sans', Helvetica, sans-serif;
 	background: #1c1f24;
 	color: #fff;
-	overflow: auto;
 }
 
 form {
@@ -38,7 +36,6 @@ h3 {
 }
 
 button, input {
-	width: 100%;
 	margin: 5px 0 10px 0;
 	padding: 10px;
 	background: #282b30;
@@ -55,7 +52,7 @@ button, input {
 		width: 80%;
 		margin: 20px auto;
 	}
-	button[disabled] {
+	button[disabled], input[type=button][disabled] {
 		color: darkgray;
 		filter: grayscale(100%);
 		cursor: default;
@@ -63,12 +60,18 @@ button, input {
 	button.recording { border-color: red }
 
 input[type=submit] {
-	margin-left: 4px;
 	background: #494c50;
 	cursor: pointer;
 }
-	#form input[type=button], #form input[type=submit] { width: calc(50% - 2.5px) }
-	#form input[type=submit] { float: right }
+	input:focus,
+	#buttons img:hover, button:not([disabled]):hover, input[type=button]:hover,
+	.bottomnav > div:hover, .sound:hover { background: #2b2e33 }
+	input[type=submit]:focus,
+	input[type=submit]:hover { background: #4b4e52 }
+	#recform button, #recform input { width: 100% }
+	#recform input[type=button], #recform input[type=submit] { width: calc(50% - 2.5px) }
+	#recform input[type=submit] { float: right }
+	input.error { border-color: red }
 
 #navbar {
 	width: 100%;
@@ -90,6 +93,7 @@ input[type=submit] {
 		overflow: hidden;
 		text-overflow: ellipsis;
 		background: url('favicon.ico') no-repeat 10px/42px;
+/*		background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text y=".9em" font-size="90">📢</text></svg>') no-repeat 10px/42px;*/
 		cursor: pointer;
 	}
 /*
@@ -113,17 +117,28 @@ input[type=submit] {
 			cursor: pointer;
 		}
 
-		#outputmsg {
+		#outputbar {
 			display: none;
 			width: 100%;
 			padding: 2px 0 3px 0;
 			text-align: center;
 			background: #494c50;
 			border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
+			cursor: pointer;
 		}
-			body.remoteplay #outputmsg { display: block }
+			body.remoteplay #outputbar { display: block }
 
-#contents, #form {
+		#clientform {
+			margin-top: 5px;
+			text-align: center;
+		}
+			#clientform input[type=password], .sound input[type=password] {
+				margin-right: 2.5px;
+				background: #1c1f24;
+			}
+			body.clientregister #clientform { display: block }
+
+#contents, #recpanel {
 	width: 100%;
 	line-height: 150%;
 	transition: opacity .4s ease;
@@ -138,7 +153,7 @@ input[type=submit] {
 	#contents > div > img { animation: drop-in-left .5s ease-out }
 		@keyframes drop-in-left { from { transform: translateX(-100vw) }}
 
-#form {
+#recpanel {
 	position: absolute;
 	top: -100%;
 	padding: 80px 0 20px 0;
@@ -146,8 +161,9 @@ input[type=submit] {
 	border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
 	transition: top .4s ease;
 }
-	#form.shown { top: 0 }
-	body.remoteplay #form { padding-top: 100px }
+	#recpanel.shown { top: 0 }
+	body.remoteplay #recpanel { padding-top: 100px }
+	body.remoteplay.clientregister #recpanel { padding-top: 160px }
 
 #credits { padding: 0 10px }
 #credits h2 {
@@ -162,13 +178,19 @@ input[type=submit] {
 }
 #credits p { padding-top: 10px }
 
-#bottomnav {
-	margin: 42px 0 20px 0;
+.bottomnav {
+	margin-top: 42px;
 	text-align: center;
 }
-	#bottomnav > div { margin-top: 20px }
+	.bottomnav:after {
+		display: block;
+		height: 20px;
+		content: '';
+	}
+	.bottomnav > div { margin-top: 20px }
+	body.credits #bottomnav { display: none }
 
-#bottomnav > div, .sound {
+.bottomnav > div, .sound {
 	width: 100%;
 /*	box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -224,8 +246,3 @@ input[type=submit] {
 }
 
 .hidden { display: none }
-
-input:focus,
-#buttons img:hover, button:not([disabled]):hover, input[type=button]:hover,
-#bottomnav > div:hover, .sound:hover { background: #2b2e33 }
-input[type=submit]:hover { background: #4b4e52 }
