--- a/httpdocs/soundboard.css
+++ b/httpdocs/soundboard.css
@@ -29,6 +29,9 @@ form {
 	width: 90%;
 	margin: 0 auto;
 }
+	#configform { text-align: center }
+	.wideform { padding-bottom: 20px }
+	.wideform button, .wideform input:not([type=checkbox]) { width: 100% }
 
 h3 {
 	padding-bottom: 10px;
@@ -68,10 +71,10 @@ input[type=submit] {
 	.bottomnav > div:hover, .sound:hover { background: #2b2e33 }
 	input[type=submit]:focus,
 	input[type=submit]:hover { background: #4b4e52 }
-	#recform button, #recform input { width: 100% }
 	#recform input[type=button], #recform input[type=submit] { width: calc(50% - 2.5px) }
 	#recform input[type=submit] { float: right }
-	input.error { border-color: red }
+
+label { margin: 5px }
 
 #navbar {
 	width: 100%;
@@ -156,7 +159,7 @@ input[type=submit] {
 #recpanel {
 	position: absolute;
 	top: -100%;
-	padding: 80px 0 20px 0;
+	padding-top: 80px;
 	background: #1c1f24;
 	border-bottom: 1px rgba(0, 0, 0, 0.2) solid;
 	transition: top .4s ease;
@@ -244,5 +247,7 @@ input[type=submit] {
 	border-top: 4px #53565a solid;
 	border-bottom: 4px #53565a solid;
 }
+
+.error { border-color: red }
 
 .hidden { display: none }
